@@ -82,6 +82,7 @@ Additions:
    * Add elm_access_highlight_next_set, export elm_widget_focus_region_show
    * File Selector : Support elm_object_part_text_set() for the ok, cancel part to change the OK, Cancel button label.
    * Add _elm_access_object_get, deprecate _elm_access_info_get
+   * Add elm_win_focus_highlight_animate_set/get().
 
 Improvements:
 
